# tornado-gui

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
doc/: Doxyfile
include/: core.hpp  led_effect.hpp  main.h  render.hpp  serial_communication.hpp
src/: core.cpp  led_effect.cpp  main.cpp  render.cpp  serial_communication.cpp  shared_data.cpp
test/: test_core.cpp
